# Money-Dahong

./: .dockerignore  .env.example  .gitignore  ARCHITECT.md  Dockerfile  README.md  README_EN.md  README_ZH.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: db.py  logger.py  store.py
app/models/: system_config.py  trade_log.py
app/templates/: base.html  index.html  settings.html  trading.html
configs/: ema_cross.toml  ma_cross.toml
engine/: exchange.py  trader.py
src/money_dahong/: __main__.py  cli.py  logging_utils.py  math_utils.py  settings.py  types.py
src/money_dahong/backtest/: __init__.py  engine.py  reporting.py
src/money_dahong/config/: __init__.py  ema_cross.py  ma_cross.py
src/money_dahong/engine/: __init__.py  trader.py
src/money_dahong/exchange/: __init__.py  binance_spot.py
src/money_dahong/notifications/: __init__.py  telegram.py
src/money_dahong/strategies/: __init__.py  base.py  ema_cross.py  ma_cross.py
tests/: test_backtest.py  test_backtest_csv_export.py  test_backtest_grid_helpers.py  test_backtest_time_window.py  test_binance_retries.py  test_binance_signing.py  test_ema_cross.py  test_ema_cross_config.py  test_ma_cross.py  test_ma_cross_config.py  test_reporting.py  test_settings.py  test_trader_balance_extract.py  test_trader_execute_notification_failure.py  test_trader_run_recovery.py  test_trader_tick_recovery.py  test_trailing_stop.py
